@@ -40,14 +40,13 @@ Print out usage.
 
 The spvd daemon and this manual page have been written by the **SmartJog** company.
 
-
 = SEE ALSO =
 
 **spvd.conf**(5),
+**spvd-plugins**(5),
 **spvd-connect**(5),
 **spvd-delivery**(5),
 **spvd-events**(5),
 **spvd-smartdamstreaming**(5),
 **spvd-streams**(5)
-
 
